include/petscpc.h

PETSC_EXTERN PetscErrorCode PCCreate(MPI_Comm, PC *);
PETSC_EXTERN PetscErrorCode PCSetType(PC, PCType);
PETSC_EXTERN PetscErrorCode PCGetType(PC, PCType *);
PETSC_EXTERN PetscErrorCode PCSetUp(PC);
PETSC_EXTERN PetscErrorCode PCSetUpOnBlocks(PC);
PETSC_EXTERN PetscErrorCode PCApply(PC, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCApplySymmetricLeft(PC, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCApplySymmetricRight(PC, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCApplyBAorAB(PC, PCSide, Vec, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCApplyTranspose(PC, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCApplyTransposeExists(PC, PetscBool *);
PETSC_EXTERN PetscErrorCode PCApplyBAorABTranspose(PC, PCSide, Vec, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCSetReusePreconditioner(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCApplyRichardson(PC, Vec, Vec, Vec, PetscReal, PetscReal, PetscReal, PetscInt, PetscBool, PetscInt *, PCRichardsonConvergedReason *);
PETSC_EXTERN PetscErrorCode PCApplyRichardsonExists(PC, PetscBool *);
PETSC_EXTERN PetscErrorCode PCSetUseAmat(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCReset(PC);
PETSC_EXTERN PetscErrorCode PCDestroy(PC *);
PETSC_EXTERN PetscErrorCode PCSetFromOptions(PC);
PETSC_EXTERN PetscErrorCode PCFactorGetMatrix(PC, Mat *);
PETSC_EXTERN PetscErrorCode PCSetOperators(PC, Mat, Mat);
PETSC_EXTERN PetscErrorCode PCGetOperators(PC, Mat *, Mat *);
PETSC_EXTERN PetscErrorCode PCGetOperatorsSet(PC, PetscBool *, PetscBool *);
PETSC_EXTERN PetscErrorCode PCView(PC, PetscViewer);
PETSC_EXTERN PetscErrorCode PCSetOptionsPrefix(PC, const char[]);
PETSC_EXTERN PetscErrorCode PCAppendOptionsPrefix(PC, const char[]);
PETSC_EXTERN PetscErrorCode PCGetOptionsPrefix(PC, const char *[]);
PETSC_DEPRECATED_FUNCTION(3, 12, 0, "PCComputeOperator()", ) static inline PetscErrorCode PCComputeExplicitOperator(PC A, Mat *B)
{
  return PCComputeOperator(A, PETSC_NULLPTR, B);
}
PETSC_EXTERN PetscErrorCode PCDiagonalScaleLeft(PC, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCDiagonalScaleRight(PC, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCSetDM(PC, DM);
PETSC_EXTERN PetscErrorCode PCGetDM(PC, DM *);
PETSC_EXTERN PetscErrorCode PCSetCoordinates(PC, PetscInt, PetscInt, PetscReal[]);
PETSC_EXTERN PetscErrorCode PCFactorSetZeroPivot(PC, PetscReal);
PETSC_EXTERN PetscErrorCode PCFactorSetShiftType(PC, MatFactorShiftType);
PETSC_EXTERN PetscErrorCode PCFactorSetShiftAmount(PC, PetscReal);
PETSC_EXTERN PetscErrorCode PCFactorSetMatSolverType(PC, MatSolverType);
PETSC_EXTERN PetscErrorCode PCFactorGetMatSolverType(PC, MatSolverType *);
PETSC_EXTERN PetscErrorCode PCFactorSetUpMatSolverType(PC);
PETSC_DEPRECATED_FUNCTION(3, 9, 0, "PCFactorSetMatSolverType()", ) static inline PetscErrorCode PCFactorSetMatSolverPackage(PC pc, MatSolverType stype)
{
  return PCFactorSetMatSolverType(pc, stype);
}
PETSC_DEPRECATED_FUNCTION(3, 9, 0, "PCFactorGetMatSolverType()", ) static inline PetscErrorCode PCFactorGetMatSolverPackage(PC pc, MatSolverType *stype)
{
  return PCFactorGetMatSolverType(pc, stype);
}
PETSC_DEPRECATED_FUNCTION(3, 9, 0, "PCFactorSetUpMatSolverType()", ) static inline PetscErrorCode PCFactorSetUpMatSolverPackage(PC pc)
{
  return PCFactorSetUpMatSolverType(pc);
}
PETSC_EXTERN PetscErrorCode PCFactorSetFill(PC, PetscReal);
PETSC_EXTERN PetscErrorCode PCFactorSetColumnPivot(PC, PetscReal);
PETSC_EXTERN PetscErrorCode PCFactorReorderForNonzeroDiagonal(PC, PetscReal);
PETSC_EXTERN PetscErrorCode PCFactorSetMatOrderingType(PC, MatOrderingType);
PETSC_EXTERN PetscErrorCode PCFactorSetReuseOrdering(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCFactorSetReuseFill(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCFactorSetUseInPlace(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCFactorSetAllowDiagonalFill(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCFactorSetPivotInBlocks(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCFactorSetLevels(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCFactorSetDropTolerance(PC, PetscReal, PetscReal, PetscInt);
PETSC_EXTERN PetscErrorCode PCASMSetLocalSubdomains(PC, PetscInt, IS[], IS[]);
PETSC_EXTERN PetscErrorCode PCASMSetTotalSubdomains(PC, PetscInt, IS[], IS[]);
PETSC_EXTERN PetscErrorCode PCASMSetOverlap(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCASMSetSortIndices(PC, PetscBool);
PETSC_EXTERN PetscErrorCode PCASMSetType(PC, PCASMType);
PETSC_EXTERN PetscErrorCode PCGASMSetOverlap(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCGASMSetType(PC, PCGASMType);
PETSC_EXTERN PetscErrorCode PCCompositeSetType(PC, PCCompositeType);
PETSC_EXTERN PetscErrorCode PCCompositeAddPCType(PC, PCType);
PETSC_EXTERN PetscErrorCode PCCompositeAddPC(PC, PC);
PETSC_EXTERN PetscErrorCode PCCompositeGetPC(PC, PetscInt, PC *);
PETSC_EXTERN PetscErrorCode PCHYPRESetType(PC, const char[]);
PETSC_EXTERN PetscErrorCode PCHYPREGetType(PC, const char *[]);
PETSC_EXTERN PetscErrorCode PCHYPRESetDiscreteGradient(PC, Mat);
PETSC_EXTERN PetscErrorCode PCHYPRESetDiscreteCurl(PC, Mat);
PETSC_EXTERN PetscErrorCode PCHYPRESetEdgeConstantVectors(PC, Vec, Vec, Vec);
PETSC_EXTERN PetscErrorCode PCHYPRESetAlphaPoissonMatrix(PC, Mat);
PETSC_EXTERN PetscErrorCode PCHYPRESetBetaPoissonMatrix(PC, Mat);
PETSC_EXTERN PetscErrorCode PCFieldSplitSetFields(PC, const char[], PetscInt, const PetscInt *, const PetscInt *);
PETSC_EXTERN PetscErrorCode PCFieldSplitSetType(PC, PCCompositeType);
PETSC_EXTERN PetscErrorCode PCFieldSplitSetBlockSize(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCFieldSplitSetIS(PC, const char[], IS);
PETSC_EXTERN PETSC_DEPRECATED_FUNCTION(3, 5, 0, "PCFieldSplitSetSchurPre()", ) PetscErrorCode PCFieldSplitSchurPrecondition(PC, PCFieldSplitSchurPreType, Mat);
PETSC_EXTERN PetscErrorCode PCFieldSplitSetSchurPre(PC, PCFieldSplitSchurPreType, Mat);
PETSC_EXTERN PetscErrorCode PCFieldSplitSetSchurFactType(PC, PCFieldSplitSchurFactType);
PETSC_EXTERN PetscErrorCode PCFieldSplitGetSchurBlocks(PC, Mat *, Mat *, Mat *, Mat *);
PETSC_EXTERN PetscErrorCode PCGAMGSetType(PC, PCGAMGType);
PETSC_EXTERN PetscErrorCode PCGAMGSetNlevels(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCGAMGSetNSmooths(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCBDDCSetDiscreteGradient(PC, Mat, PetscInt, PetscInt, PetscBool, PetscBool);
PETSC_EXTERN PetscErrorCode PCBDDCSetDivergenceMat(PC, Mat, PetscBool, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetChangeOfBasisMat(PC, Mat, PetscBool);
PETSC_EXTERN PetscErrorCode PCBDDCSetPrimalVerticesIS(PC, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetPrimalVerticesLocalIS(PC, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetCoarseningRatio(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCBDDCSetLevels(PC, PetscInt);
PETSC_EXTERN PetscErrorCode PCBDDCSetDirichletBoundaries(PC, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetDirichletBoundariesLocal(PC, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetNeumannBoundaries(PC, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetNeumannBoundariesLocal(PC, IS);
PETSC_EXTERN PetscErrorCode PCBDDCSetDofsSplitting(PC, PetscInt, IS[]);
PETSC_EXTERN PetscErrorCode PCBDDCSetDofsSplittingLocal(PC, PetscInt, IS[]);
PETSC_EXTERN PetscErrorCode PCMGSetType(PC, PCMGType);
PETSC_EXTERN PetscErrorCode PCMGGetType(PC, PCMGType *);
PETSC_EXTERN PetscErrorCode PCMGSetLevels(PC, PetscInt, MPI_Comm *);
PETSC_EXTERN PetscErrorCode PCMGGetLevels(PC, PetscInt *);
PETSC_EXTERN PetscErrorCode PCMGSetCycleType(PC, PCMGCycleType);
PETSC_EXTERN PetscErrorCode PCMGSetCycleTypeOnLevel(PC, PetscInt, PCMGCycleType);
PETSC_DEPRECATED_FUNCTION(3, 5, 0, "PCMGSetCycleTypeOnLevel()", ) static inline PetscErrorCode PCMGSetCyclesOnLevel(PC pc, PetscInt l, PetscInt t)
{
  return PCMGSetCycleTypeOnLevel(pc, l, (PCMGCycleType)t);
}
PETSC_EXTERN PetscErrorCode PCMGSetRhs(PC, PetscInt, Vec);
PETSC_EXTERN PetscErrorCode PCMGSetX(PC, PetscInt, Vec);
PETSC_EXTERN PetscErrorCode PCMGSetR(PC, PetscInt, Vec);
PETSC_EXTERN PetscErrorCode PCMGSetRestriction(PC, PetscInt, Mat);
PETSC_EXTERN PetscErrorCode PCMGGetRestriction(PC, PetscInt, Mat *);
PETSC_EXTERN PetscErrorCode PCMGSetInterpolation(PC, PetscInt, Mat);
PETSC_EXTERN PetscErrorCode PCMGGetInterpolation(PC, PetscInt, Mat *);
PETSC_EXTERN PetscErrorCode PCMGSetRScale(PC, PetscInt, Vec);
PETSC_EXTERN PetscErrorCode PCMGGetRScale(PC, PetscInt, Vec *);
PETSC_EXTERN PetscErrorCode PCPatchSetCellNumbering(PC, PetscSection);
PETSC_EXTERN PetscErrorCode PCPatchSetConstructType(PC, PCPatchConstructType, PetscErrorCode (*)(PC, PetscInt *, IS *[], IS *, PetscCtx), PetscCtx);
PETSC_EXTERN PetscErrorCode PCPatchSetDiscretisationInfo(PC, PetscInt, DM[], PetscInt[], PetscInt[], const PetscInt **, const PetscInt[], PetscInt, const PetscInt[], PetscInt, const PetscInt[]);
PETSC_EXTERN PetscErrorCode PCPatchSetComputeOperator(PC, PetscErrorCode (*)(PC, PetscInt, Vec, Mat, IS, PetscInt, const PetscInt *, const PetscInt *, void *), void *);
PETSC_EXTERN PetscErrorCode PCPatchSetComputeFunction(PC pc, PetscErrorCode (*)(PC, PetscInt, Vec, Vec, IS, PetscInt, const PetscInt *, const PetscInt *, void *), PetscCtx ctx);
PETSC_EXTERN PetscErrorCode PCPatchSetComputeOperatorInteriorFacets(PC, PetscErrorCode (*)(PC, PetscInt, Vec, Mat, IS, PetscInt, const PetscInt *, const PetscInt *, void *), void *);
PETSC_EXTERN PetscErrorCode PCPatchSetComputeFunctionInteriorFacets(PC pc, PetscErrorCode (*)(PC, PetscInt, Vec, Vec, IS, PetscInt, const PetscInt *, const PetscInt *, void *), PetscCtx ctx);